fixing images not showing on deploy/vercel

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -140,7 +140,7 @@ a {
 }
 
 .background-glow {
-  background-image: url("../../public/img/glow.png");
+  background-image: url("../../public/img/glow.PNG");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
